# FireWireAudio

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Error.h  Info.plist  Package.resolved  README.MD  build-optimized.sh  fwa.txt  git-diff-extract.sh  isoch.sh  isoch.txt  log.txt  olddiff.txt  olddriver.txt  optimize.txt  tmp.sh  transmit.txt
.PVS-Studio/State/: WindowState.json
DebugTools/: FBL-44-d8.txt  FBL-iso-48k.txt  analyzer.html  ch0.csv  ch1.csv  compare_syt.py  correct48_ch0.csv  correct48_ch1.csv  dbc_sim.py  fwdbg_daemon.lldb  fwdbg_daemon_bp.py  fwdbg_driver.lldb  fwdbg_driver_bp.py  fwdebug.sh  logdaemon.sh  logdriver.sh  mismatches.csv  parse_firebug.py  phase1.py  phase2.py  phase_ac.py  wrong44_ch0.csv  wrong44_ch1.csv  wrong44_mismatches.csv
DebugTools/Analyzer/: .coverage  .gitignore  Makefile  README.md  app.py  app_mvc.py  app_original.py  pytest.ini  requirements.txt  run.sh  run_tests.py
FWA-Control/: AVCTabView.swift  AppLoggers.swift  AudioSubunitDetailsView.swift  CAPICallbackHandler.swift  CMakeLists.txt  ConnectionMatrixView.swift  ContentView.swift  CoreAudioHALManager.swift  CoreAudioHALView.swift  DaemonServiceManager.swift  DeviceBasicInfoView.swift  DeviceDataMapper.swift  DeviceManager.swift  DeviceRefreshButton.swift  DeviceStatusIndicatorView.swift  DriverInstallService.swift  DriverInstaller.swift  DriverInstallerService.swift  EngineService.swift  ExpandableSectionView.swift  FWA-Control.icns  FWADaemon.plist  FWA_Control.entitlements  FWControlApp.swift  HardwareInterface.swift  HexDumpView.swift  Info.plist  InfoBlockDetailView.swift  LogConsoleView.swift  LogStore.swift  MusicSubunitDetailsView.swift  OverviewView.swift  PermissionManager.swift  PlugDetailView.swift  PlugListView.swift  SettingsView.swift  StatusBarView.swift  StreamsView.swift  SubunitInfoSectionView.swift  SystemServicesManager.swift  (+6 more)
FWA-Control/Logging/: InMemoryLogHandler.swift
FWA-Control/Models/: DiagnosticsModels.swift  DomainModels.swift  Enums.swift  HALInfo.swift  JsonDecodables.swift  ModelTypes.swift  Models.swift  SystemStatus.swift
FWA-Control/Views/: AudioConfigurationSection.swift  DeviceOverviewCard.swift  DevicePickerView.swift  DiagnosticsView.swift  EmptyDeviceStateView.swift  PlugMatrixSection.swift  SharedOverviewComponents.swift  SubunitDetailsSection.swift  TechnicalSpecsSection.swift
FWA-Control/legacy-backup-20250602-130052/: DeviceManager.swift  FWAManagerBridge.swift
cmake/: libaspl-override.cmake
docs/: current_shm.md  current_transmit.md  firebug.md  optimization.md  scheme.txt  ui.md  updated_signal_flow.md
include/: fwa_capi.h
include/FWA/: AVCInfoBlock.hpp  AudioDevice.h  AudioDeviceStream.hpp  AudioPlug.hpp  AudioStreamFormat.hpp  AudioSubunit.hpp  CommandInterface.h  DescriptorAccessor.hpp  DescriptorReader.hpp  DescriptorSpecifier.hpp  DescriptorUtils.hpp  DeviceController.h  DeviceInfo.hpp  DeviceParser.hpp  DiceAudioDevice.h  DiceDefines.hpp  DiceEAP.hpp  DiceRouter.hpp  Enums.hpp  Error.h  Helpers.h  IFireWireDeviceDiscovery.h  IOKitFireWireDeviceDiscovery.h  JsonHelpers.hpp  MusicSubunit.hpp  MusicSubunitCapabilities.hpp  MusicSubunitDescriptorParser.hpp  PlugDetailParser.hpp  Subunit.hpp  SubunitDiscoverer.hpp  UnitPlugDiscoverer.hpp
include/FWA_CAPI/: module.modulemap
include/Isoch/: AudioDeviceStream.hpp  SharedManagers.hpp  (+2 more)
isoch2/: rename.sh
nbuild/: .ninja_deps  .ninja_log  DartConfiguration.tcl  Doxyfile.docs  FirewireAudioDaemon  Logging.d  Logging.swiftdoc  Logging.swiftmodule  Logging.swiftsourceinfo  build.ninja  cmake_install.cmake
src/: AudioDevice.cpp  CommandInterface.cpp  DeviceController.cpp  DeviceParser.cpp  Helpers.cpp  IOKitFireWireDeviceDiscovery.cpp  fwa_capi.cpp  main.cpp
src/FWA/: AVCInfoBlock.cpp  AudioDevice.cpp  AudioPlug.cpp  AudioStreamFormat.cpp  AudioSubunit.cpp  CMakeLists.txt  CommandInterface.cpp  DescriptorAccessor.cpp  DescriptorReader.cpp  DescriptorSpecifier.cpp  DescriptorUtils.cpp  DeviceController.cpp  DeviceInfo.cpp  DeviceParser.cpp  DiceAudioDevice.cpp  DiceEAP.cpp  DiceRouter.cpp  Helpers.cpp  IOKitFireWireDeviceDiscovery.cpp  JsonHelpers.cpp  MusicSubunit.cpp  MusicSubunitCapabilities.cpp  MusicSubunitDescriptorParser.cpp  PlugDetailParser.cpp  SubunitDiscoverer.cpp  UnitPlugDiscoverer.cpp
src/FWA/XPC/: CMakeLists.txt  MixedAudioBuffer.m  XPCBridge.mm  XPCReceiverClient.mm
src/Isoch/: AmdtpHelpers.cpp  AmdtpTransmitter.cpp  AudioDeviceStream.cpp  CIPHeaderHandler.cpp  CMakeLists.txt  IsoStreamHandler.cpp  IsochBufferManager.cpp  SharedManagers.cpp
src/Isoch/components/: AmdtpTransportManager.cpp  TransmitterComponents.cpp
src/Isoch/core/: AmdtpReceiver.cpp  AmdtpTransmitStreamProcessor.cpp  AmdtpTransmitter.cpp  AppleSyTGenerator.cpp  AudioClockPLL.cpp  AudioProcessingThread.cpp  CIPPreCalculator.cpp  DCLBatcher.cpp  IsochBufferManager.cpp  IsochDCLManager.cpp  IsochDoubleBufferManager.cpp  IsochManager.cpp  IsochMonitoringManager.cpp  IsochPacketProcessor.cpp  IsochPacketProvider.cpp  IsochPortChannelManager.cpp  IsochTransmitBufferManager.cpp  IsochTransmitDCLManager.cpp  IsochTransportManager.cpp  ReceiverFactory.cpp
src/Isoch/utils/: AmdtpHelpers.cpp  CIPHeaderHandler.cpp  RunLoopHelper.cpp
src/driver/: CMakeLists.txt  DriverXPCManager.hpp  DriverXPCManager.mm  FWADriver.cpp  FWADriverDevice.cpp  FWADriverDevice.hpp  FWADriverHandler.cpp  FWADriverHandler.hpp  FWADriverInit.cpp  FWADriverInit.hpp  FWADriverXPCBridge.h  FWADriverXPCBridge.mm  FWAIOOps.hpp  FWAStream.cpp  FWAStream.hpp  Info.plist  SharedMemoryStructures.hpp
src/xpc/FWAXPC/: CMakeLists.txt  RingBufferManager.cpp  RingBufferManager.mm  ShmIsochBridge.cpp  ShmIsochBridge.mm
test/: AmdtpTransmitterIntegrationTests.cpp  CIPPreCalculatorModernTests.cpp  CIPPreCalculatorTests_Simple.cpp  CMakeLists.txt  ConcurrencyTests.cpp  DBCEmergencyPathTests.cpp  DBCSimpleTests.cpp  DBCTests.cpp  DCLCallbackIntegrationTests.cpp  IOKitFireWireDeviceDiscoveryTests.cpp  MockAmdtpTransmitterTests.cpp
tools/: check-formatting.sh  format-all.sh  install-clang-format.sh
(+123 files in other folders)
